--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,11 @@
     "open",
     "science"
   ],
+  "autoload": {
+    "classmap": [
+      "classes/"
+    ]
+  },
   "minimum-stability": "stable",
   "require": {
     "php": ">=8.0"
